# Academy_BDD_Cpp

./: .gitignore  README.md
Exercise_1/: CMakeLists.txt  README.md  README.txt  build.bat  build.sh  setup_environment.bat
Exercise_1/cmake/modules/: CodeCoverage.cmake
Exercise_1/tests/feature/: CMakeLists.txt  Gemfile
Exercise_1/tests/feature/features/: Calculator.feature
Exercise_1/tests/feature/features/step_definitions/: step_definitions.cpp
Exercise_2/: CMakeLists.txt  Home Automation System Requirements Spezifikation.docx  README.md  project-export.cmake  project_version.h.in
Exercise_2/include/: digital_io_interface.h  heater_controller.h  home_automation_control.h  light_controller.h  light_scheduler.h  project_version.h  scheduler_interface.h  switch_control_interface.h  temperature_control_interface.h  temperature_sensor_interface.h  time_service_interface.h
Exercise_2/src/: CMakeLists.txt  heater_controller.cpp  home_automation_control.cpp  light_controller.cpp  light_scheduler.cpp  main.cpp
Exercise_2/tests/feature/: CMakeLists.txt
Exercise_2/tests/feature/features/heater_control/: 003-HeaterControl.feature
Exercise_2/tests/feature/features/light_control/: 001-LighSwitch.feature  002-LightSchedule.feature
Exercise_2/tests/feature/features/step_definitions/: fake_io.h  fake_temperature_sensor.h  fake_time_service.h  heater_steps.cpp  home_automation_context.h  light_scheduler_steps.cpp  light_switch_steps.cpp  step_definition_helper_methods.h
Exercise_2/tests/unit/: CMakeLists.txt
Exercise_2/tests/unit/include/: heater_mock.h  light_controller_mock.h  light_fake.h  light_mock.h  temperature_sensor_mock.h  time_service_mock.h
Exercise_2/tests/unit/src/: heater_controller_test.cpp  home_automation_control_test.cpp  light_controller_test.cpp  light_scheduler_test.cpp
Exercise_3/: README.md
